--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ads-prototyping-boilerplate",
+  "name": "atlaskit-playground",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,10 +8,6 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -25,5 +21,13 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "@atlaskit/app-provider": "^2.2.0",
+    "@atlaskit/button": "^23.2.0",
+    "@atlaskit/css-reset": "^7.3.0",
+    "@atlaskit/primitives": "^14.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
