--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@atlaskit/eslint-plugin-design-system": "^13.15.0",
+    "@compiled/babel-plugin": "^0.37.1",
+    "@compiled/babel-plugin-strip-runtime": "^0.37.1",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -24,9 +27,15 @@
   },
   "dependencies": {
     "@atlaskit/app-provider": "^2.2.0",
+    "@atlaskit/avatar": "^25.1.0",
+    "@atlaskit/badge": "^18.1.1",
+    "@atlaskit/banner": "^14.0.2",
     "@atlaskit/button": "^23.2.0",
     "@atlaskit/css-reset": "^7.3.0",
     "@atlaskit/primitives": "^14.8.0",
+    "@atlaskit/spinner": "^18.0.4",
+    "@atlaskit/tokens": "^4.9.0",
+    "@atlaskit/tooltip": "^20.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
