Refactor project structure and update dependencies
- Updated .gitignore to include coverage and environment variable files.
- Changed index.html to use the correct DOCTYPE and updated the title.
- Updated package.json to reflect new versioning and adjusted dependencies for @atlaskit components.
- Enhanced README.md with detailed project features, quick start instructions, and best practices for using Atlaskit components.
- Refactored App.tsx to utilize new component structure and styling with @atlaskit primitives.
- Removed unused App.css and index.css files to streamline the project.
- Updated tsconfig files for improved TypeScript configuration.
- Adjusted Vite configuration to set the server port and enable auto-opening in the browser.
- Added detailed component matching and styling guidelines in Cursor rules.

--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
   "name": "atlaskit-playground",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@atlaskit/eslint-plugin-design-system": "^13.15.0",
-    "@compiled/babel-plugin": "^0.37.1",
-    "@compiled/babel-plugin-strip-runtime": "^0.37.1",
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  },
   "dependencies": {
-    "@atlaskit/app-provider": "^2.2.0",
-    "@atlaskit/avatar": "^25.1.0",
+    "@atlaskit/avatar": "^21.2.0",
     "@atlaskit/badge": "^18.1.1",
-    "@atlaskit/banner": "^14.0.2",
-    "@atlaskit/button": "^23.2.0",
-    "@atlaskit/css-reset": "^7.3.0",
-    "@atlaskit/primitives": "^14.8.0",
-    "@atlaskit/spinner": "^18.0.4",
-    "@atlaskit/tokens": "^4.9.0",
+    "@atlaskit/banner": "^12.7.3",
+    "@atlaskit/button": "^17.0.0",
+    "@atlaskit/code": "^14.0.0",
+    "@atlaskit/css-reset": "^6.5.4",
+    "@atlaskit/dropdown-menu": "^12.0.0",
+    "@atlaskit/form": "^8.11.0",
+    "@atlaskit/heading": "^1.0.0",
+    "@atlaskit/icon": "^21.12.8",
+    "@atlaskit/logo": "^13.10.0",
+    "@atlaskit/lozenge": "^12.2.3",
+    "@atlaskit/modal-dialog": "^14.2.0",
+    "@atlaskit/page-header": "^10.0.0",
+    "@atlaskit/primitives": "^1.5.0",
+    "@atlaskit/progress-bar": "^4.0.5",
+    "@atlaskit/select": "^16.5.7",
+    "@atlaskit/tabs": "^13.3.12",
+    "@atlaskit/tag": "^14.0.8",
+    "@atlaskit/tokens": "^1.0.0",
     "@atlaskit/tooltip": "^20.0.6",
+    "@emotion/react": "^11.11.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
