--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
 *.local
+
+# Testing
+coverage
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +27,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Cursor
+.cursor-log/
